--- a/.github/workflows/nextjs-ci.yml
+++ b/.github/workflows/nextjs-ci.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ main ]
 
+defaults:
+  run:
+    working-directory: ./fashion-ecommerce
+    
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
