--- a/.github/workflows/nextjs-ci.yml
+++ b/.github/workflows/nextjs-ci.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: 'fashion-ecommerce/package-lock.json'
+          working-directory: ./fashion-ecommerce
 
       # 3. Cài dependency
       - name: Install dependencies
