--- a/.github/workflows/nextjs-ci.yml
+++ b/.github/workflows/nextjs-ci.yml
@@ -6,10 +6,11 @@ on:
   pull_request:
     branches: [ main ]
 
+# Mặc định mọi lệnh `run:` sẽ chạy trong thư mục ./fashion-ecommerce
 defaults:
   run:
     working-directory: ./fashion-ecommerce
-    
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -19,24 +20,24 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Cài Node
+      # 2. Cài Node + cache npm (lock file nằm trong thư mục con)
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-          working-directory: ./fashion-ecommerce
+          cache-dependency-path: 'fashion-ecommerce/package-lock.json'
 
       # 3. Cài dependency
       - name: Install dependencies
         run: npm install
 
-      # 4. Chạy lint (nếu có script "lint" trong package.json)
+      # 4. Chạy lint
       - name: Run lint
         run: npm run lint
         continue-on-error: false
 
-      # 5. Chạy test (nếu bạn có "test")
+      # 5. Chạy test
       - name: Run tests
         run: npm test
         continue-on-error: false
