--- a/.github/workflows/nextjs-ci.yml
+++ b/.github/workflows/nextjs-ci.yml
@@ -6,11 +6,6 @@ on:
   pull_request:
     branches: [ main ]
 
-# Mặc định mọi lệnh `run:` sẽ chạy trong thư mục ./fashion-ecommerce
-defaults:
-  run:
-    working-directory: ./fashion-ecommerce
-
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -31,6 +26,7 @@ jobs:
       # 3. Cài dependency
       - name: Install dependencies
         run: npm install
+        working-directory: fashion-ecommerce
 
       # 4. Chạy lint
       - name: Run lint
