--- a/.github/workflows/nextjs-ci.yml
+++ b/.github/workflows/nextjs-ci.yml
@@ -25,8 +25,9 @@ jobs:
 
       # 3. Cài dependency
       - name: Install dependencies
-        run: npm install
-        working-directory: fashion-ecommerce
+        run: |
+          cd fashion-ecommerce
+          npm install
 
       # 4. Chạy lint
       - name: Run lint
