--- a/fashion-ecommerce/package.json
+++ b/fashion-ecommerce/package.json
@@ -22,6 +22,7 @@
     "docker:logs": "docker-compose logs -f"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.2.5",
     "turbo": "^1.12.4",
     "typescript": "^5.3.3"
@@ -31,4 +32,3 @@
     "npm": ">=9.0.0"
   }
 }
-
