--- a/fashion-ecommerce/package.json
+++ b/fashion-ecommerce/package.json
@@ -22,9 +22,12 @@
     "docker:logs": "docker-compose logs -f"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
+    "@typescript-eslint/parser": "^8.49.0",
+    "eslint": "^9.39.1",
     "prettier": "^3.2.5",
     "turbo": "^2.6.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.9.3"
   },
   "engines": {
     "node": ">=18.0.0",
