--- a/fashion-ecommerce/package.json
+++ b/fashion-ecommerce/package.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^8.49.0",
     "@typescript-eslint/parser": "^8.49.0",
     "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "prettier": "^3.2.5",
     "turbo": "^2.6.2",
     "typescript": "^5.9.3"
