--- a/fashion-ecommerce/packages/database/package.json
+++ b/fashion-ecommerce/packages/database/package.json
@@ -9,7 +9,8 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
-    "db:seed": "tsx seed.ts"
+    "db:seed": "tsx seed.ts",
+    "prepare": "npm run db:generate"
   },
   "dependencies": {
     "@prisma/client": "^5.9.1"
